# whitepaper

./: .gitignore  DEMO_SCRIPT.md  Project.md  README.md  WARP.md  agricultural_2019_6.csv  architecture.md  comprehensive_system_test.py  consumption_detail_06_2021_general_purpose.csv  demo.cast  demo_agent_system.py  final_execution_test.py  loop_fix_test.py  pyproject.toml  quick_test.py  setup_demo.sh  simple_test.py
cleaned-dataset/: agricultural_2019_6_cleaned.csv  consumption_detail_06_2021_general_purpose_cleaned.csv
whitepaper/: __init__.py  __main__.py  agent.py  cli.py  etl.py  hub_spoke_shell.py  scanner.py  shell.py  utils.py
whitepaper/agents/: __init__.py  base_agent.py  hub_spoke_system.py  models.py  nine_agents.py  state.py
whitepaper/observability/: __init__.py  agent_tracer.py  monitoring_dashboard.py  persistent_storage.py  structured_logger.py
whitepaper/reports/: analysis_test_analysis_query_20250907_193850.txt
whitepaper/ui/: __init__.py  cyberpunk_terminal.py
